<resources>
    <string name="app_name">Wallet manager</string>
    <string name="message_drive_client_is_ready" translatable="false">Google Drive client is ready</string>
    <string name="message_google_sign_in_failed" translatable="false">Google Sign In failed</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_category" translatable="false">Category_Activity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_category2" translatable="false">Category_Activity2</string>
    <string name="home" translatable="false">Home</string>
    <string name="history" translatable="false">History</string>
    <string name="empty_history" translatable="false">Empty history</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="overview" translatable="false">Overview</string>
    <string name="dialog_catname_rename" translatable="false">Category name:</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="undo" translatable="false">Undo</string>
    <string name="d_tr_notes" translatable="false">Notes...</string>
    <string name="d_tr_acc_select" translatable="false">Select account</string>
    <string name="d_tr_acc" translatable="false">Account</string>
    <string name="d_tr_date" translatable="false">Date</string>
    <string name="d_tr_expense" translatable="false">Expenses</string>
    <string name="d_tr_income" translatable="false">Income</string>
    <string name="d_tr_category" translatable="false">Category</string>
    <string name="d_tr_save" translatable="false">Save a transaction?</string>
    <string name="d_tr_update" translatable="false">Update a transaction?</string>
    <string name="d_tr_suss_saved" translatable="false">Successfully saved!</string>
    <string name="d_tr_suss_updated" translatable="false">Successfully updated!</string>
    <string name="add_transaction_succesfully" translatable="false">Added transaction successfully!</string>
    <string name="entry_canceled" translatable="false">Entry cancelled!</string>
    <string name="d_date_select_month" translatable="false">Select a month</string>
    <string name="jan" translatable="false">January</string>
    <string name="feb" translatable="false">February</string>
    <string name="mar" translatable="false">March</string>
    <string name="apr" translatable="false">April</string>
    <string name="may" translatable="false">May</string>
    <string name="jun" translatable="false">June</string>
    <string name="jul" translatable="false">July</string>
    <string name="aug" translatable="false">August</string>
    <string name="sep" translatable="false">September</string>
    <string name="ost" translatable="false">October</string>
    <string name="nov" translatable="false">November</string>
    <string name="dec" translatable="false">December</string>
    <string name="day" translatable="false">Day</string>
    <string name="month" translatable="false">Month</string>
    <string name="year" translatable="false">Year</string>
    <string name="custom" translatable="false">Custom</string>
    <string name="today" translatable="false">Today</string>
    <string name="yesterday" translatable="false">Yesterday</string>
    <string name="tomorow" translatable="false">Tomorow</string>
    <string name="select_range" translatable="false">Select a date range</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="colorpicker_dialog_cancel" translatable="false">Cancel</string>
    <string name="colorpicker_dialog_ok" translatable="false">Save</string>
    <string name="filter_save" translatable="false">Save</string>
    <string name="filter_cancel" translatable="false">Cancel</string>
    <string name="filter_clear" translatable="false">Clear</string>
    <string name="filter_amount" translatable="false">Amount</string>
    <string name="filter_currency" translatable="false">Currency</string>
    <string name="filter_currency_all" translatable="false">All</string>
    <string name="filter_period" translatable="false">Period</string>
    <string name="filter_type_operation" translatable="false">Type of operation</string>
    <string name="filter_account" translatable="false">Account</string>
    <string name="filter_from" translatable="false">From</string>
    <string name="filter_to" translatable="false">To</string>
    <string name="filter_date_start" translatable="false">Start</string>
    <string name="filter_date_end" translatable="false">End</string>
    <string name="filter_type_debits" translatable="false">Debits</string>
    <string name="filter_type_all" translatable="false">All</string>
    <string name="filter_type_credits" translatable="false">Credits</string>
    <string-array name="periods">
        <item>FULL TIME</item>
        <item>LAST WEEK</item>
        <item>LAST MONTH</item>
        <item>LAST YEAR</item>
        <item>OTHER</item>
    </string-array>
    <string name="account" translatable="false">Accounts</string>
    <string name="search" translatable="false">Search...</string>
    <string name="description" translatable="false">Description</string>
    <string name="account_balance" translatable="false">Account balance</string>
    <string name="lack_description" translatable="false">No description</string>
    <string name="select_currency" translatable="false">Select currency</string>
    <string name="new_account" translatable="false">New account</string>
    <string name="write" translatable="false">Write...</string>
    <string name="to_many_acc" translatable="false">To many accounts!</string>
    <string name="exists" translatable="false">Such a name already exists</string>
    <string name="write_name" translatable="false">Write account name</string>
    <string name="primary_account" translatable="false">Primary account</string>
    <string name="updated" translatable="false">Updated!</string>
    <string name="delete_ask_1" translatable="false">Do you want to delete account</string>
    <string name="delete_ask_2" translatable="false">and all transactions associated with it?</string>
    <string name="delete_account" translatable="false">Delete account</string>
    <string-array name="categories">
        <item>żywność i napoje</item>
        <item>mieszkanie</item>
        <item>transport</item>
        <item>higiena i uroda</item>
        <item>opieka zdrowotna</item>
        <item>rozrywka i wypoczynek</item>
        <item>odzież i obuwie</item>
        <item>komunikacja i technologia</item>
        <item>finanse i ubezpieczenie</item>
        <item>edukacja</item>

        <item>praca</item>
        <item>inwestycje</item>
        <item>zasiłki</item>
        <item>darowizny</item>
        <item>inne</item>
    </string-array>
    <string name="expense_categories" translatable="false">Expenses</string>
    <string name="income_categorie" translatable="false">Incomes</string>
    <string name="no_accounts" translatable="false">No accounts</string>
    <string name="details" translatable="false">Details</string>
    <string name="error_upload" translatable="false">Error upload</string>
    <string name="error_download" translatable="false">Error download</string>
    <string name="delete_ask_1_1" translatable="false">Do you want to delete category: </string>
    <string name="add_subactegory" translatable="false">Add subcategory </string>
    <string name="new_subcategory" translatable="false">new subcategory </string>
    <string name="delete_subcat_ask1" translatable="false">Do you want to delete "</string>
    <string name="delete_subcat_ask2" translatable="false">" and all transactions associated with it?</string>
    <string name="too_long_subcategory" translatable="false">Subcategory name too long!</string>
    <string name="account_setting" translatable="false">Google settings</string>
    <string name="auto_log_in" translatable="false">Auto sign in to your Google account on startup</string>
    <string name="auto_cloud_save" translatable="false">Autosync with Google Drive</string>
    <string name="auto_cloud_load" translatable="false">Load data from Google Cloud at application launch</string>
    <string name="general_setting" translatable="false">General settings</string>
    <string name="show_balance" translatable="false">Show account balance</string>
    <string name="delete_database" translatable="false">Delete database</string>
    <string name="default_database" translatable="false">Default database</string>
    <string name="upload_to_google" translatable="false">Upload to Google Cloud</string>
    <string name="download_from_google" translatable="false">Download from Google Drive</string>
    <string name="not_logged" translatable="false">You are not logged into your Google account!</string>
    <string name="log_in" translatable="false">Sign in with Google</string>
    <string name="log_out" translatable="false">Log out</string>
    <string name="delete_db_ask" translatable="false">Do you want to delete the entire database from the device?</string>
    <string name="default_db_ask" translatable="false">Do you want to restore the default database? The existing data will be deleted from the device.</string>
    <string name="removed_db" translatable="false">The database has been deleted!</string>
    <string-array name="category_icon">
        <item>x22</item>
        <item>x51</item>
        <item>x28</item>
        <item>x23</item>
        <item>x92</item>
        <item>x48</item>
        <item>x115</item>
        <item>x34</item>
        <item>x118</item>
        <item>x14</item>
        <item>x15</item>
        <item>x7</item>
        <item>x25</item>
        <item>x50</item>
        <item>x36</item>
    </string-array>
    <string-array name="subcategories1">
        <item>artykuły spożywcze i napoje</item>
        <item>restauracje i jedzenie na wynos</item>
        <item>przekąski i słodycze</item>
    </string-array>
    <string-array name="subcategories2">
        <item>czynsz</item>
        <item>rachunki za media</item>
        <item>remonty i naprawy</item>
        <item>wyposażenie domu</item>
    </string-array>
    <string-array name="subcategories3">
        <item>paliwo</item>
        <item>bilety</item>
        <item>parkingi</item>
        <item>utrzymanie i naprawy samochodu</item>
    </string-array>
    <string-array name="subcategories4">
        <item>leki i suplementy</item>
        <item>wizyty u lekarza i opieki medycznej</item>
        <item>opieka dentystyczna</item>
    </string-array>
    <string-array name="subcategories5">
        <item>pielęgnacja</item>
        <item>makijaż</item>
        <item>higiena osobista</item>
    </string-array>
</resources>