<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/dialog_background">

        <TextView
            android:id="@+id/dAccTitleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/new_account"
            android:textColor="@color/olx_color_1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <ImageView
            android:id="@+id/dAccCancel"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:clickable="true"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@+id/dAccTitleTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dAccTitleTxt"
            app:tint="@color/olx_color_1"></ImageView>

        <ImageView
            android:id="@+id/dAccSave"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="15dp"
            android:clickable="true"
            android:src="@drawable/ic_check2"
            app:layout_constraintBottom_toBottomOf="@+id/dAccTitleTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dAccTitleTxt"
            app:tint="@color/olx_color_1"></ImageView>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/accountNameEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/new_account"
            android:maxLength="20"
            android:maxLines="1"
            android:minWidth="200dp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dAccTitleTxt"></androidx.appcompat.widget.AppCompatEditText>

        <TextView
            android:id="@+id/dAccCurrSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_background_black"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:gravity="center_vertical"
            android:hint="@string/select_currency"
            android:padding="12dp"
            android:textColor="@color/olx_color_1"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountNameEt"></TextView>

        <LinearLayout
            android:id="@+id/dAccDescLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/dAccCurrSelect">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:clickable="false"
                android:text="@string/description"
                android:textColor="@color/olx_color_1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dAccDescTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="4dp"
                android:clickable="false"
                android:maxLength="80"
                android:text="@string/lack_description"
                android:textColor="@color/olx_color_1"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dAccBalanceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/dAccDescLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:clickable="false"
                android:text="@string/account_balance"
                android:textColor="@color/olx_color_1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:clickable="false"
                android:gravity="left|top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dAccBalanceTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:clickable="false"
                    android:maxLength="80"
                    android:text="0"
                    android:textColor="@color/color_green_light"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/dAccCurrSymbolTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:layout_marginLeft="8dp"
                    android:clickable="false"
                    android:maxLength="80"
                    android:text="zł"
                    android:textColor="@color/color_green_light"
                    android:textSize="30sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_deleteAccount"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:clickable="true"
                android:src="@drawable/ic_delete"
                app:tint="@color/color_red_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_account"
                android:textColor="@color/olx_color_1"
                android:textSize="16sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>